--- a/starterOnly/css/style.css
+++ b/starterOnly/css/style.css
@@ -111,8 +111,10 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
+}
 
-
+.hidden {
+  display: none;
 }
 
 .modal-btn {
