--- a/starterOnly/css/style.css
+++ b/starterOnly/css/style.css
@@ -32,6 +32,8 @@ img {
 .topnav {
   overflow: hidden;
   margin: 3.5%;
+  display: flex;
+  justify-content: space-between;
 }
 .header-logo {
     float: left;
@@ -64,6 +66,10 @@ img {
   border-radius: 15px;
 }
 
+.topnav a:hover span {
+  border-bottom: 2px solid white;
+}
+
 .topnav .icon {
   display: none;
 }
@@ -90,14 +96,13 @@ img {
   }
 }
 
-
-
  @media screen and (max-width: 540px) {
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    color: #fe142f;
+    font-size: 12px;
   }
 } 
 
@@ -105,9 +110,7 @@ main {
   font-size: 130%;
   font-weight: bolder;
   color: black;
-  padding-top: 0.5vw;
-  padding-left: 2vw;
-  padding-right: 2vw;
+  padding: 0.5vw 2vw 0 2vw;
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
@@ -335,6 +338,52 @@ input[data-error]::after {
   cursor: pointer;
   border: 0;
 }
+
+/* Thank notification window */
+.bground-thx {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+}
+
+.content-thx {
+  margin: 5% auto;
+  width: 100%;
+  max-width: 500px;
+  height: 720px;
+  background: #232323;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  position: relative;
+  padding-top: 10px;
+}
+
+.body-thx {
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  margin: auto 50px;
+}
+
+.text-thx {
+  text-align: center;
+  color: #c4c4c4;
+}
+
+.buttonThx {
+
+}
+
 /* custom select styles */
 .custom-select {
   position: relative;
@@ -407,7 +456,6 @@ input[data-error]::after {
   font-size: 16px;
 }
 .hero-section {
-  min-height: 93vh;
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -461,7 +509,7 @@ input[data-error]::after {
 }
 .hero-img img {
   width: 100%;
-  height: 100%;
+  height: 750px;
   display: block;
   padding: 0;
 }
