--- a/starterOnly/css/style.css
+++ b/starterOnly/css/style.css
@@ -72,22 +72,51 @@ img {
 
 .topnav .icon {
   display: none;
+  color: #ff0000;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 414px) {
+  .topnav.responsive .icon {
+    top: -15px;
+  }
+}
+
+@media screen and (max-width: 540px) {
   .topnav a {display: none;}
   .topnav a.icon {
-    float: right;
-    display: block;
+    height: 2rem;
+    justify-content: center;
+    margin: 0.5rem 0rem;
+    width: 2rem;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .topnav {
+    flex-wrap: wrap;
+  }
+  
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .topnav.responsive {
+    position: relative;
+  }
+
   .topnav.responsive .icon {
     position: absolute;
-    right: 0;
-    top: 0;
+    right: 10px;
+    top: 0px;
+    display: flex;
+    justify-content: center;
   }
   .topnav.responsive a {
     float: none;
@@ -96,15 +125,62 @@ img {
   }
 }
 
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    color: #fe142f;
-    font-size: 12px;
+@media screen and (max-width: 800px) {
+  .header-logo img {
+    width: 150px;
   }
-} 
+
+  .hero-section {
+    display: block;
+    box-shadow: unset;
+  }
+
+  .hero-content {
+    background: #fff;
+    color: #000;
+    padding: 0;
+  }
+
+  .hero-content::after {
+    content: unset;
+  }
+
+  .hero-content .btn-signup {
+    display: none;
+  }
+
+  .hero-headline {
+    font-size: 25px;
+    white-space: normal;
+    overflow-wrap: break-word;
+  }
+
+  .hero-text {
+    width: unset;
+    font-size: 10px;
+    margin-top: 15px;
+  }
+
+  .hero-img img {
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    margin-top: 40px;
+  }
+
+  .hero-section>.btn-signup {
+    display: block;
+    margin: 32px auto 10px;
+    padding: 12px 35px;
+  }
+
+  .copyrights {
+    margin-top: 50px;
+    text-align: center;
+  }
+}
 
 main {
   font-size: 130%;
