--- a/starterOnly/css/style.css
+++ b/starterOnly/css/style.css
@@ -194,8 +194,11 @@ main {
 
 .hidden {
   display: none;
-  font-size: 0,4em;
-  color: red;
+}
+
+.hidden-text {
+  color: #fe142f;
+  font-size: 12px;
 }
 
 .modal-btn {
