--- a/starterOnly/css/style.css
+++ b/starterOnly/css/style.css
@@ -34,6 +34,7 @@ img {
   margin: 3.5%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 .header-logo {
     float: left;
@@ -67,7 +68,7 @@ img {
 }
 
 .topnav a:hover span {
-  border-bottom: 2px solid white;
+  border-bottom: 1px solid white;
 }
 
 .topnav .icon {
